--- a/app/views/layouts/logined.html.erb
+++ b/app/views/layouts/logined.html.erb
@@ -6,7 +6,9 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://cdn.ckeditor.com/4.7.1/standard/ckeditor.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
   <% if notice %>
@@ -23,20 +25,47 @@
     </div>
    <%= form_for @question do |f| %>
    <div class="field">
-      <%= f.text_field :content , :size => 25 %>
+      <%= f.text_field :content , :size => 45 , class: "form-control", placeholder: "Ask a question"%>
     </div>
 
     <div class="actions">
-      <%= f.submit "Ask question" %>
+      <%= f.submit "Ask question" , class: "btn btn-primary"%>
     </div>
   <% end %>
     <nav>
-      <ul>
-        <li>Read</li>
-        <li>
-          <%= link_to "Answer", :controller => "questions", :action => "index" %>
+      <ul class="navigate">
+        <li class="nav">
+        <i class="fa fa-book" aria-hidden="true"></i>
+        <%= link_to "Read", :controller => "home", :action => "index" %>
         </li>
-        <li>Profile</li>
+        <li class="nav">
+          <i class="fa fa-pencil" aria-hidden="true"></i>
+          <%= link_to "Answer", :controller => "answers", :action => "index" %>
+        </li>
+       <!--  <li class="nav">
+          <i class="fa fa-user" aria-hidden="true"></i>
+          <%= link_to "Profile", :controller => "home", :action => "profile" %>
+        </li> -->
+        <!-- <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown button
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <%= link_to "Profile", :controller => "home", :action => "profile" %>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </div> -->
+        <li>
+            <div class="dropdown">
+              <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-user" aria-hidden="true"></i> Profile
+              <span class="caret"></span></button>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Settings", :controller => "home", :action => "profile" %></li>
+                <li><%= link_to "SignOut", destroy_user_session_path, method: :delete %></li>
+              </ul>
+            </div>
+        </li>
       </ul>
     </nav>
 </header> 
