--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -24,10 +24,11 @@
     </div>
   <% end %>
    <div class="field">
-      <%= f.text_field :content , :size => 25 %>
+      <%= f.text_field :content%>
     </div>
 
     <div class="actions">
       <%= f.submit "Ask question" %>
     </div>
+    <% end %>
   <% end %>
