--- a/app/views/layouts/logined.html.erb
+++ b/app/views/layouts/logined.html.erb
@@ -50,27 +50,15 @@
           <span>Answer</span>
         </li>
         <% end %>
-       <!--  <li class="nav">
-          <i class="fa fa-user" aria-hidden="true"></i>
-          <%= link_to "Profile", :controller => "home", :action => "profile" %>
-        </li> -->
-        <!-- <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown button
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <%= link_to "Profile", :controller => "home", :action => "profile" %>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div> -->
         <li>
             <div class="dropdown">
               <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-user" aria-hidden="true"></i> Profile
               <span class="caret"></span></button>
               <ul class="dropdown-menu">
+                <li><%= link_to "My Answers", :controller => "home", :action => "my_answers" %></li>
+                <li><%= link_to "My Questions", :controller => "home", :action => "my_questions" %></li>
                 <li><%= link_to "Settings", :controller => "home", :action => "profile" %></li>
-                <li><%= link_to "SignOut", destroy_user_session_path, method: :delete %></li>
+                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
               </ul>
             </div>
         </li>
