Added follow functionality to questions

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -4,3 +4,14 @@
 [class^="upvote"]{
 	margin-top: 12px;
 }
+.quesFollow {
+	margin: 6px;
+	align-text: right;
+	padding-bottom: 10px;
+}
+h4.seperator{
+	border-top: 1px solid grey;
+	font-weight: bold;
+	padding-top: 12px;
+	margin-bottom: 24px;
+}
