--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -11,6 +11,8 @@
 
 .quesActionBtn {
 	margin-right: 12px;
+	margin-top: 12px;
+	display: inline-block;
 	border: 1px solid #c4d1e0;
 	border-radius: 4px;
 	padding: 6px;
