--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -13,17 +13,12 @@
 
   <div class="field">
     <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :question_id %><br>
-    <%= f.text_field :question_id %>
+    <%= f.text_area :content, id: "content_#{@answer.id}" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
+<script type="text/javascript">
+  CKEDITOR.replace('content_<%= @answer.id%>')
+</script>
