--- a/app/views/home/my_answers.html.erb
+++ b/app/views/home/my_answers.html.erb
@@ -15,6 +15,8 @@
 	    	 </div>
 	    	<div class="answer_<%= ans.id %>">
 		      	<%= render '/questions/upvote', ans: ans %>
+		      	<a href="#" type="button" class="quesActionBtn" data-toggle="modal" data-target="#myansModal_<%= ans.id %>">Edit Answer</a>
+				<%= render 'questions/ansModal',{ '@answer': ans} %>
 		    </div>
 		    <% end %>
 	    </div>
