--- a/app/views/questions/_upvote.html.erb
+++ b/app/views/questions/_upvote.html.erb
@@ -7,8 +7,8 @@
 			color: grey;
 			border: 1px solid grey;
 			pointer-events: none;
+			display: none;
 		}
-
 	</style>
 <% elsif ans.upvoted_by current_user %>
 <style type="text/css">
