--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -9,26 +9,7 @@
 		    	</div>
 		    	<div class="quesEdit">
 		    		<a href="#" type="button" class="quesActionBtn" data-toggle="modal" data-target="#myModal">Edit Question</a>
-		    		<!-- Modal -->
-					<div id="myModal" class="modal fade" role="dialog">
-					  <div class="modal-dialog">
-
-					    <!-- Modal content-->
-					    <div class="modal-content">
-					      <div class="modal-header">
-					        <button type="button" class="close" data-dismiss="modal">&times;</button>
-					        <h4 class="modal-title">Editing Question</h4>
-					      </div>
-					      <div class="modal-body">
-					        <p><%= render 'form' %></p>
-					      </div>
-					      <div class="modal-footer">
-					        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					      </div>
-					    </div>
-
-					  </div>
-					</div>
+		    		<%= render 'quesModal'%>
 		    	</div>
 	    	</div>
     	</div>
@@ -46,6 +27,10 @@
     		</div>
    			<div class= "answer_<%= ans.id %>">
 	      		<%= render 'upvote', ans: ans %>
+	      		<% if ans.my_ans? current_user.id %>
+		      		<a href="#" type="button" class="quesActionBtn" data-toggle="modal" data-target="#myansModal">Edit Answer</a>
+					<%= render 'ansModal' %>
+				<% end %>
 	      	</div>
 	     <% end %>
   </section>
