--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 main.wrapper {
 	section.box {
+		margin-top: 110px;
 		div.profilePic{
 			display: flex;
 			justify-content: center;
