Feed modified to show random answers

--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 main.wrapper {
-	background-color: #fafafa;
+	background-color: #f4f4f4;
 	display: flex;
 	justify-content: center;
 	section.box {
